force-app/main/default/objects/Partner_Record_Share__c/Partner_Record_Share__c.object-meta.xml
<CustomObject>
    <label>Partner Record Share</label>
    <nameField>
        <displayFormat>PRS-{000000}</displayFormat>
        <label>Partner Record Share Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Record Shares</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>