force-app/main/default/objects/Partner_Record_Share__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether the share is active.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>