force-app/main/default/objects/Partner_Record_Share__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>Optional access expiry.</description>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>