force-app/main/default/objects/Partner_Record_Share__c/fields/Granted_By__c.field-meta.xml
<CustomField>
    <fullName>Granted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who granted access.</description>
    <label>Granted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Granted_Partner_Record_Shares</relationshipName>
    <type>Lookup</type>
</CustomField>