force-app/main/default/objects/Partner_Record_Share__c/fields/Granted_On__c.field-meta.xml
<CustomField>
    <fullName>Granted_On__c</fullName>
    <description>Date access was granted.</description>
    <label>Granted On</label>
    <type>DateTime</type>
</CustomField>