force-app/main/default/objects/Partner_Record_Share__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Partner account receiving access.</description>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Partner_Record_Shares</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>