force-app/main/default/objects/Partner_Record_Share__c/fields/Partner_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Partner_Group_Id__c</fullName>
    <description
  >Salesforce group that received access when this grant was created. Persisted so later mapping changes cannot prevent or misdirect revocation.</description>
    <label>Partner Group Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>