force-app/main/default/objects/Partner_Record_Share__c/fields/Revoked_On__c.field-meta.xml
<CustomField>
    <fullName>Revoked_On__c</fullName>
    <description>Date access was revoked.</description>
    <label>Revoked On</label>
    <type>DateTime</type>
</CustomField>