force-app/main/default/objects/Partner_Record_Share__c/fields/Salesforce_Share_Id__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Share_Id__c</fullName>
    <description
  >Underlying Salesforce share row created for this registry record.</description>
    <label>Salesforce Share Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>