force-app/main/default/objects/Partner_Record_Share__c/fields/Share_Reason__c.field-meta.xml
<CustomField>
    <fullName>Share_Reason__c</fullName>
    <description>Reason access was granted.</description>
    <label>Share Reason</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Co-Sell</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Regional Manager</fullName>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>Deal Conflict Review</fullName>
            </value>
            <value>
                <fullName>MDF Review</fullName>
            </value>
            <value>
                <fullName>Multi-Account Access</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>