force-app/main/default/objects/Partner_Record_Share__c/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <description>Object type.</description>
    <label>Target Object</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deal Registration</fullName>
            </value>
            <value>
                <fullName>MDF Request</fullName>
            </value>
            <value>
                <fullName>Deal Implementation</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>AI Insight</fullName>
            </value>
            <value>
                <fullName>Partner Performance Snapshot</fullName>
            </value>
            <value>
                <fullName>Customer Success Engagement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>