force-app/main/default/objects/Partner_Record_Share__c/fields/Target_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_Record_Id__c</fullName>
    <description>Record being shared.</description>
    <label>Target Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>